@@ -1,4 +1,9 @@
-2024-10-03  Stefan Kangas  <stefankangas@gmail.com>
+2024-10-10  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-wait-for-regexp):
+	* tramp-message.el (tramp-error-with-buffer, tramp-user-error):
+	Don't redisplay in `sit-for'.  (Bug#73718)
+
 
 	* tramp.el (tramp-temp-buffer-file-name): Prefer defvar-local
 	where possible, and the package does not support Emacs 24.3 or
